--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+bin64/
+
+# QT Generated Files
+moc/*.cpp
+ui/*.h
+qrc/*.cpp
+ 
 # User-specific files
 *.rsuser
 *.suo
