--- a/TrackEditor/TrackEditor.vcxproj.filters
+++ b/TrackEditor/TrackEditor.vcxproj.filters
@@ -34,6 +34,12 @@
     <ClCompile Include="moc\moc_TilePicker.cpp">
       <Filter>Qt Generated Files\Moc Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditSurfaceDialog.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="moc\moc_EditSurfaceDialog.cpp">
+      <Filter>Qt Generated Files\Moc Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Track.h">
@@ -60,6 +66,9 @@
     <ClInclude Include="ui\ui_TilePicker.h">
       <Filter>Qt Generated Files\Ui Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui\ui_EditSurfaceDialog.h">
+      <Filter>Qt Generated Files\Ui Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="LogDialog.h">
@@ -82,6 +91,12 @@
     </CustomBuild>
     <CustomBuild Include="TilePicker.h">
       <Filter>Headers</Filter>
+    </CustomBuild>
+    <CustomBuild Include="EditSurfaceDialog.h">
+      <Filter>Headers</Filter>
+    </CustomBuild>
+    <CustomBuild Include="EditSurfaceDialog.ui">
+      <Filter>Resources</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
