--- a/TrackEditor/TrackEditor.vcxproj.filters
+++ b/TrackEditor/TrackEditor.vcxproj.filters
@@ -43,6 +43,12 @@
     <ClCompile Include="ChunkEditValues.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="TrackPreview.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="moc\moc_TrackPreview.cpp">
+      <Filter>Qt Generated Files\Moc Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Track.h">
@@ -103,6 +109,9 @@
     </CustomBuild>
     <CustomBuild Include="EditSurfaceDialog.ui">
       <Filter>Resources</Filter>
+    </CustomBuild>
+    <CustomBuild Include="TrackPreview.h">
+      <Filter>Headers</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
