adding qt license file

--- a/TrackEditor/TrackEditor.vcxproj
+++ b/TrackEditor/TrackEditor.vcxproj
@@ -73,6 +73,11 @@ xcopy ..\external\Qt5\bin\libEGLd.dll .\$(OutDir) /R /Y /d /i &gt; null
 xcopy ..\external\Qt5\bin\libGLESv2d.dll .\$(OutDir) /R /Y /d /i &gt; null
 if %errorlevel% NEQ 0 goto Failed
 
+echo Copying License Files...
+xcopy ..\external\Qt5\QT_License.txt .\$(OutDir) /R /Y /d /i &gt; null
+xcopy ..\external\LicensedLibs.txt .\$(OutDir) /R /Y /d /i &gt; null
+if %errorlevel% NEQ 0 goto Failed
+
 echo Post-Build Step for $(ProjectName) completed successfully
 exit 0
 
@@ -105,6 +110,11 @@ exit 1</Command>
       <Command>echo Copying QT dlls...
 xcopy ..\external\Qt5\bin\libEGL.dll .\$(OutDir) /R /Y /d /i &gt; null
 xcopy ..\external\Qt5\bin\libGLESv2.dll .\$(OutDir) /R /Y /d /i &gt; null
+if %errorlevel% NEQ 0 goto Failed
+
+echo Copying License Files...
+xcopy ..\external\Qt5\QT_License.txt .\$(OutDir) /R /Y /d /i &gt; null
+xcopy ..\external\LicensedLibs.txt .\$(OutDir) /R /Y /d /i &gt; null
 if %errorlevel% NEQ 0 goto Failed
 
 echo Post-Build Step for $(ProjectName) completed successfully
