--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,10 @@ FodyWeavers.xsd
 /TrackEditor/ui
 /TrackEditor/moc
 /bin64
+!/external
+!/external/glew
+!/external/glew/lib
+!/external/glew/lib/Debug
+!/external/glew/lib/Release
+!/external/glew/lib/Debug/x64
+!/external/glew/lib/Release/x64
