--- a/TrackEditor/TrackEditor.vcxproj.filters
+++ b/TrackEditor/TrackEditor.vcxproj.filters
@@ -49,6 +49,12 @@
     <ClCompile Include="moc\moc_TrackPreview.cpp">
       <Filter>Qt Generated Files\Moc Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditSeriesDialog.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="moc\moc_EditSeriesDialog.cpp">
+      <Filter>Qt Generated Files\Moc Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="ShapeGenerator.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -86,6 +92,9 @@
     </ClInclude>
     <ClInclude Include="ChunkEditValues.h">
       <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\ui_EditSeriesDialog.h">
+      <Filter>Qt Generated Files\Ui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ShapeData.h">
       <Filter>Headers</Filter>
@@ -129,6 +138,12 @@
       <Filter>Resources</Filter>
     </CustomBuild>
     <CustomBuild Include="TrackPreview.h">
+      <Filter>Headers</Filter>
+    </CustomBuild>
+    <CustomBuild Include="EditSeriesDialog.ui">
+      <Filter>Resources</Filter>
+    </CustomBuild>
+    <CustomBuild Include="EditSeriesDialog.h">
       <Filter>Headers</Filter>
     </CustomBuild>
   </ItemGroup>
